--- a/index.html
+++ b/index.html
@@ -33,12 +33,39 @@
   <polaris-chip title="Sports are the only thing that matters "></polaris-chip>
   <polaris-chip title="Grants and Donations "></polaris-chip>
 
-  <h1>my-card</h1>
+  <<h1>Controls</h1>
+  <div class="control-wrapper">
+    <button class="duplicate">Clone Card</button>
+    <button id="changetitle">Change Title</button>
+    <button id="changeimage">Change Image</button>
+    <button id="changebg">Change Background</button>
+    <button id="delete">Delete Card</button>
+  <div id="cardlist">
+  <div class="card">
+    <img class = 'card-image' src= https://www.foodnetwork.com/content/dam/images/food/fullset/2012/9/5/1/WU0306H_perfect-french-fries_s4x3.jpg>
+  <div class="card-text">
+    <h2 class = 'card-title'> Origin of the French Fry </h2>
+    <hr>
+    <p>The french fry is one of the most beloved sides of all time. Despite the name the "french" fry was not invented in France but instead Beligum!</p>
+  <div class="btn-wrapper">
+    <button class = 'btn'></a>
+    <a href="https://hax.psu.edu"
+       target="_blank">Details
+      </a>
+  </div>
+    </div>
+      </div>
+        </div>
+  
   <my-card></my-card>
 
   <!-- this is what is bringing in the definition for this tag -->
   <script type="module" src="./src/polaris-chip.js"></script>
   <script type="module" src="./src/my-card.js"></script>
+
+  <script>
+    
+  </script>
 </body>
 
 </html>
