--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
 
   <h1>Controls</h1>
   <div class="control-wrapper">
-    <button id="duplicate">Clone Card</button>
-    <button id="changetitle">Change Title</button>
-    <button id="changeimage">Change Image</button>
+    <button class="duplicate">Clone Card</button>
+    <button class="changetitle">Change Title</button>
+    <button class="changeimage">Change Image</button>
     <button id="changebg">Change Background</button>
-    <button id="delete">Delete Card</button>
-  
+    <button class="delete">Delete Card</button>
+  </div>
   
   
 
@@ -55,48 +55,52 @@
   <my-card cardtitle="Tacos" image="https://www.allrecipes.com/thmb/vG-of0Xa0W0eodSXPWV1KXD009U=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/70935-taqueria-style-tacos-mfs-3x2-35-9145991a0ef94ceb8be05ae8d6be4f0f.jpg" description="Mexican originated, American adapted" link="https://hax.psu.edu" borderColor="green"></my-card>
   </div>
 
+<counter-app counter="16" min="10" max="25"></counter-app>
+
+    
+</body>
+ 
   <script>
     
-    document.querySelector('.duplicate').addEventListener('click', function(event) {
-  if (document.querySelectorAll('.card').length < 10 ) {
-    const newCard = document.querySelector('#cardlist .card').cloneNode(true);
-  // Q1: this is currently appending to the body;
-  // how can we append so that it's placed right next to the other card?
- document.querySelector('#cardlist').appendChild(newCard);
-}
+  document.querySelector('.duplicate').addEventListener('click', function(event) {
+    const card = document.querySelectorAll('my-card')
+    if (card.length < 10) {
+      const lastCard = card[card.length - 1] 
+      const newCard = lastCard.cloneNode(true)
+      document.querySelector('#cardlist').appendChild(newCard)
+    }
 });
 
-// Q2: How would we change the title of the card?
 document.querySelector('#changetitle').addEventListener('click', function(e) {
   document.querySelector('.card-title').innerHTML = "Huge Jerk";
 })
 
-// Q3: How would we change the image of the card on click to https://github.com/elmsln.png
 document.querySelector('#changeimage').addEventListener('click', function(e) {
   document.querySelector('.card-image').src = "https://github.com/elmsln.png";
 })
 
-// Q4: How would we hook up the button to change the background via a css class?
 document.querySelector('#changebg').addEventListener('click', function(e) {
-  document.querySelector('.card').classList.add('change-color');
+  console.log('clicked')
+  const card = document.querySelectorAll('my-card')
+
+  card.forEach(cards => {
+    const shadowroot = cards.shadowRoot
+    const newcard = shadowroot.querySelectorAll('.cardlist')
+    console.log(newcard)
+
+    newcard.forEach(card => {
+      card.classList.toggle('change-color')
+    })
+
+  })
+  
 })
-// Q5: How would we delete the last card?
 document.querySelector('#delete').addEventListener('click', function(e) {
   console.log(document.querySelectorAll('.card').length);
   if (document.querySelectorAll('.card').length !== 1) {
   document.querySelector('.card').remove();
   }
 })
-/* Additional logic to add:
-  - Ensure that when we DELETE cards, that we never delete 
-    our 1st one or we can't use the 'app'
-  - Ensure that when we ADD cards that we never add more than 10
-  - Ensure that when we change the background class that we are 
-    able to toggle the classes to be the opposite of what they 
-    are (so eithere the class is there and visually applied, 
-    or its not, and toggles for all elements)
-*/
-
 
   </script>
 </body>
