--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 <script type="module" src="./src/polaris-chip.js"></script>
 <script type="module" src="./src/my-card.js"></script>
 <script type="module" src="./src/counter-app.js"></script>
+<script type="module" src="./src/campus-alert.js"></script>
 
 </body>
  
