--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 </head>
 
 <body>
+  <campus-alert></campus-alert>
+
   <h1>polaris-chip</h1> 
   <!-- this is going to do whatever the tag's defaults are -->
 <polaris-chip></polaris-chip> 
