--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
 </head>
 
 <body>
-  <campus-alert></campus-alert>
+  <campus-alert alertType = "notice"></campus-alert>
+  <campus-alert alertType = "warning"></campus-alert>
+  <campus-alert alertType = "alert"></campus-alert>
+  
 
   <h1>polaris-chip</h1> 
   <!-- this is going to do whatever the tag's defaults are -->
