--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
 </head>
 
 <body>
+<div class ="campus-alert">
   <campus-alert alertType = "notice"></campus-alert>
   <campus-alert alertType = "warning"></campus-alert>
   <campus-alert alertType = "alert"></campus-alert>
-  
+</div>  
 
   <h1>polaris-chip</h1> 
   <!-- this is going to do whatever the tag's defaults are -->
