--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
 
 <body>
 <div class ="campus-alert">
-  <campus-alert alertType = "notice"></campus-alert>
-  <campus-alert alertType = "warning"></campus-alert>
-  <campus-alert alertType = "alert"></campus-alert>
+  <campus-alert alertType = "color" sticky ></campus-alert>
+  <campus-alert date= "January 1 - 2024" alertType = "notice" ></campus-alert>
+  <campus-alert date= "February  1 - 2024"alertType = "warning"></campus-alert>
+  <campus-alert date= "March 1 - 2024" alertType = "alert"></campus-alert>
 </div>  
 
   <h1>polaris-chip</h1> 
