--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
   <campus-alert date= "January 1 - 2024" alertType = "notice" ></campus-alert>
   <campus-alert date= "February  1 - 2024"alertType = "warning"></campus-alert>
   <campus-alert date= "March 1 - 2024" alertType = "alert"></campus-alert>
+</body>
+
+<body>
+  <haxcms-partyui></haxcms-partyui>
+</body>
+
 
   <h1>polaris-chip</h1> 
   <!-- this is going to do whatever the tag's defaults are -->
