--- a/index.html
+++ b/index.html
@@ -29,11 +29,9 @@
   <campus-alert date= "January 1 - 2024" alertType = "notice" ></campus-alert>
   <campus-alert date= "February  1 - 2024"alertType = "warning"></campus-alert>
   <campus-alert date= "March 1 - 2024" alertType = "alert"></campus-alert>
-</body>
 
-<body>
-  <haxcms-partyui></haxcms-partyui>
-</body>
+  <party-ui></party-ui>
+
 
 
   <h1>polaris-chip</h1> 
@@ -78,6 +76,7 @@
 <script type="module" src="./src/my-card.js"></script>
 <script type="module" src="./src/counter-app.js"></script>
 <script type="module" src="./src/campus-alert.js"></script>
+<script type="module" src="./src/haxcms-party-ui.js"></script>
 
 </body>
  
