--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
   <campus-alert date= "March 1 - 2024" alertType = "alert"></campus-alert>
 
   <party-ui></party-ui>
+  <tagging-question></tagging-question>
 
 
 
@@ -80,6 +81,7 @@
 <script type="module" src="./src/counter-app.js"></script>
 <script type="module" src="./src/campus-alert.js"></script>
 <script type="module" src="./src/haxcms-party-ui.js"></script>
+<script type="module" src="./src/tagging-question.js"></script>
 
 </body>
  
