--- a/index.html
+++ b/index.html
@@ -36,7 +36,29 @@
   <campus-alert date= "March 1 - 2024" alertType = "alert"></campus-alert>
 
   <party-ui></party-ui>
-  <tagging-question></tagging-question>
+  <tagging-question>
+    question= "What best describes this image?"
+    description=""
+    imageURL=""
+    answerset="1"
+  </tagging-question>
+  
+  <tagging-questions
+  question="Question 1: Which tags best describe this image?"
+  description="The logo of the best open source project."
+  imageURL="https://iam.hax.psu.edu/emo5318/sites/mannyortiz/assets/banner.jpg"
+  answerset="hax-logo"
+  >  
+  </tagging-questions>
+
+  <tagging-questions
+  question="Question 2: What best describes this image?"
+  description="A Vietnamese Pot-bellied pig wearing a hat and a piece of clothing."
+  imageURL="https://th.bing.com/th/id/R.63047ae94657c6cefda291138c5ad76c?rik=jrdUAv9oRKGVuA&riu=http%3a%2f%2fwww.dumpaday.com%2fwp-content%2fuploads%2f2017%2f03%2frandom-pictures-33-2.jpg&ehk=qyN0BotHhfarLi40WWV5iKhaJQ2r0mrf857I4Xj%2bTpg%3d&risl=&pid=ImgRaw&r=0"
+  answerset="pig"
+  ></tagging-questions>
+
+
 
 
 
@@ -84,6 +106,7 @@
 <script type="module" src="./src/campus-alert.js"></script>
 <script type="module" src="./src/haxcms-party-ui.js"></script>
 <script type="module" src="./src/tagging-question.js"></script>
+<script type="module" src="./src/test.js"></script>
 
 </body>
  
